tests/baselines/reference/jsxExcessPropsAndAssignability.errors.txt
tests/cases/compiler/jsxExcessPropsAndAssignability.tsx(13,27): error TS2698: Spread types may only be created from object types.
tests/cases/compiler/jsxExcessPropsAndAssignability.tsx(14,6): error TS2322: Type 'ComposedComponentProps & { myProp: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Component<WrapperComponentProps, any, any>> & Readonly<{ children?: ReactNode; }> & Readonly<ComposedComponentProps> & Readonly<{ myProp: string; }>'.
  Type 'ComposedComponentProps & { myProp: number; }' is not assignable to type 'Readonly<{ myProp: string; }>'.
    Types of property 'myProp' are incompatible.
      Type 'number' is not assignable to type 'string'.
tests/cases/compiler/jsxExcessPropsAndAssignability.tsx(14,27): error TS2698: Spread types may only be created from object types.


==== tests/cases/compiler/jsxExcessPropsAndAssignability.tsx (3 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from 'react';
    
    const myHoc = <ComposedComponentProps extends any>(
        ComposedComponent: React.ComponentClass<ComposedComponentProps>,
    ) => {
        type WrapperComponentProps = ComposedComponentProps & { myProp: string };
        const WrapperComponent: React.ComponentClass<WrapperComponentProps> = null as any;
    
        const props: ComposedComponentProps = null as any;
    
        <WrapperComponent {...props} myProp={'1000000'} />;
                              ~~~~~
!!! error TS2698: Spread types may only be created from object types.
        <WrapperComponent {...props} myProp={1000000} />;
         ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'ComposedComponentProps & { myProp: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Component<WrapperComponentProps, any, any>> & Readonly<{ children?: ReactNode; }> & Readonly<ComposedComponentProps> & Readonly<{ myProp: string; }>'.
!!! error TS2322:   Type 'ComposedComponentProps & { myProp: number; }' is not assignable to type 'Readonly<{ myProp: string; }>'.
!!! error TS2322:     Types of property 'myProp' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
                              ~~~~~
!!! error TS2698: Spread types may only be created from object types.
    };
    